# fcitx5-mcbopomofo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  bumpversion.py  org.fcitx.Fcitx5.Addon.McBopomofo.metainfo.xml.in  run-xgettext.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  package.yaml  qodo-pr-agent.yaml
data/: CMakeLists.txt  associated-phrases-v2.txt  data-plain-bpmf.txt  derive_associated_phrases.py  dictionary_service.json
distro/archlinux/: PKGBUILD
patches/: standardpaths-fix.patch
po/: CMakeLists.txt  LINGUAS  en.po  fcitx5-mcbopomofo.pot  zh_TW.po
src/: AbstractKeyHandler.h  CMakeLists.txt  ChineseConverter.cpp  ChineseConverter.h  DictionaryService.cpp  DictionaryService.h  Format.h  InputHelperNumber.cpp  InputHelperNumber.h  InputMacro.cpp  InputMacro.h  InputMode.h  InputState.cpp  InputState.h  Key.h  KeyHandler.cpp  KeyHandler.h  KeyHandlerTest.cpp  LanguageModelLoader.cpp  LanguageModelLoader.h  Log.cpp  Log.h  McBopomofo.cpp  McBopomofo.h  McBopomofoLM.h  NumberInputHelper.cpp  NumberInputHelper.h  PathCompat.h  TimestampedPath.cpp  TimestampedPath.h  TimestampedPathTest.cpp  UTF8Helper.cpp  UTF8Helper.h  UTF8HelperTest.cpp  mcbopomofo-addon.conf  mcbopomofo-addon.conf.in  mcbopomofo-addon.conf.in.in  mcbopomofo-plain.conf.in.in  mcbopomofo.conf.in  mcbopomofo.conf.in.in  (+2 more)
src/Big5Utils/: Big5Utils.cpp  Big5Utils.h  Big5UtilsTest.cpp  CMakeLists.txt
src/ChineseNumbers/: CMakeLists.txt  ChineseNumbers.cpp  ChineseNumbers.h  ChineseNumbersTest.cpp  StringUtils.cpp  StringUtils.h  SuzhouNumbers.cpp  SuzhouNumbers.h  SuzhouNumbersTest.cpp
src/Engine/: AssociatedPhrases.cpp  AssociatedPhrases.h  AssociatedPhrasesV2.cpp  ByteBlockBackedDictionary.cpp  ByteBlockBackedDictionaryBenchmark.cpp  ByteBlockBackedDictionaryTest.cpp  CMakeLists.txt  McBopomofoLM.cpp  McBopomofoLM.h  McBopomofoLMTest.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedFileTest.cpp  ParselessLM.cpp  ParselessLM.h  ParselessLMBenchmark.cpp  ParselessLMTest.cpp  ParselessPhraseDB.cpp  ParselessPhraseDB.h  ParselessPhraseDBTest.cpp  PhraseReplacementMap.cpp  PhraseReplacementMap.h  UserOverrideModel.cpp  UserOverrideModel.h  UserOverrideModelTest.cpp  UserPhrasesLM.cpp  UserPhrasesLM.h  UserPhrasesLMTest.cpp
src/Engine/Gramambular/: BlockReadingBuilder.h  Grid.h  Node.h  Walker.h
src/Engine/Mandarin/: CMakeLists.txt  Mandarin.cpp  Mandarin.h  MandarinTest.cpp
src/Engine/gramambular2/: CMakeLists.txt  language_model.h  reading_grid.cpp  reading_grid.h  reading_grid_test.cpp
src/RomanNumbers/: CMakeLists.txt  RomanNumbers.cpp  RomanNumbers.h  RomanNumbersTest.cpp
